src/objects/CM_Time__c.object
<CustomObject>
    <fields>
        <fullName>Date_Incurred__c</fullName>
        <label>Date Incurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <label>ImportID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incurred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incurred By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Times</relationshipLabel>
        <relationshipName>Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Task__c</fullName>
        <label>Project Task</label>
        <referenceTo>CM_Task__c</referenceTo>
        <relationshipLabel>Times</relationshipLabel>
        <relationshipName>Times</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Time</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Task__c</columns>
        <columns>Hours__c</columns>
        <columns>Incurred_By__c</columns>
        <columns>Date_Incurred__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PT{0000}</displayFormat>
        <label>Project Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>